# 3DReconstruction

./: CMakeLists.txt  Eigen2CV.h  kernels.cu  main.cpp  package.xml  playground.py  reconstruct.cpp
math/: Notes.txt  quat_likely.csv  quat_secondary.csv  rot.csv  translation_differences.txt  tx.csv  tx_alt.csv
